--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +13,11 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "express": "^4.21.2"
   },
   "devDependencies": {
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "tsx": "^4.20.0"
   }
 }
