--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
-    "express": "^4.21.2"
+    "cors": "^2.8.5",
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "prisma": "^6.9.0",
